# rustwemoji-parser

./: Cargo.toml  README.md  test.sh
src/: lib.rs
