[package]
name = "rustwemoji-parser"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "Twemoji parser for Rust"
homepage = "https://github.com/neodyland/rustwemoji-parser"
repository = "https://github.com/neodyland/rustwemoji-parser"
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml"
]

[features]
default = []
discord = []
async = []
tokio = ["dep:tokio","async"]
async-std = ["dep:async-std","async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", optional = true, features = ["attributes"] }
regex = "1.8.1"
rustwemoji = "0.1.1"
tokio = { version = "1.27.0", optional = true, features = ["rt","macros"] }
